Fix alignment around the tech list section in style.css

--- a/style.css
+++ b/style.css
@@ -211,6 +211,7 @@ body {
   border-radius: 15px;
   margin: 0 auto;
   margin-bottom: 5rem;
+  font-family: poppins, sans-serif;
 }
 
 .work-wrap {
@@ -223,7 +224,6 @@ body {
   color: #172b4d;
   text-transform: capitalize;
   font-size: 2rem;
-  font-family: poppins, sans-serif;
   margin: 1rem 0;
 }
 
@@ -237,7 +237,6 @@ body {
   font-size: 13px;
   line-height: 16px;
   color: #344563;
-  font-family: poppins, sans-serif;
 }
 
 .work-info {
@@ -245,7 +244,6 @@ body {
   font-size: 15px;
   line-height: 24px;
   font-weight: 400;
-  font-family: poppins, sans-serif;
   margin: 1rem 0;
 }
 
